# virtual_friend

./: .gitignore  .python-version  README.md  pyproject.toml
src/: cli.py
src/virtual_friend/: __init__.py  chat_bot.py  conversation.py  language_model.py  text_to_speech.py
