[project]
name = "virtual_friend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takuminmin-m", email = "takuminmin0718@gmail.com" }
]
dependencies = [
    "torch==2.1.2+cu118",
    "torchvision==0.16.2+cu118",
    "torchaudio==2.1.2+cu118",
    "transformers",
    "sentencepiece>=0.1.99",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.3.post2",
    "scipy>=1.10.1",
    "setuptools>=69.0.3",
    "pip>=23.3.2",
    "simpleaudio>=1.0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/virtual_friend"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"
